@@ -1,3 +1,6 @@
+Sep 19, 2023
+  BulkGeneRename: better qc
+
 Feb 27, 2023
   replaced class Counters with CounterPool from rgdcore
 
